popote/deployment-monopod.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: popote
  name: deployment-popote-monopod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-popote-monopod
  template:
    metadata:
      labels:
        app: deployment-popote-monopod
    spec:
      containers:
      - name: popote-mariadb
        image: popote_vuejs_k8s-mariadb:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 3306
          
      - name: popote-backend
        image: popote_vuejs_k8s-backend:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 3000
      
      - name: popote-frontend
        image: K8Smaster/popote_vuejs_k8s-frontend:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8080
      
      - name: popote-nginx
        image: popote_vuejs_k8s-nginx:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 80
          - containerPort: 443
