popote/popote-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: popote-service
  labels:
    app: popote
  namespace: popote
spec:
  selector:
    app: popote
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: popote-port
  - protocol: TCP
    port: 443
    targetPort: 443
    name: popote-port-sec
  - protocol: TCP
    port: 3000
    targetPort: 3000
    name: popote-backend
  type: ClusterIP
