popote/popote-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-popote
  namespace: popote
spec:
  # ingressClassName: nginx
  rules:
  # - host: "k8sbfr.zapto.org"
  - host: "popote.zapto.org"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: popote-service
            port:
              number: 8080
